--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -331,6 +331,6 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<h1> {{ hour }} : {{ minute }} : {{ seconds }} </h1>
 
 <router-outlet />
