--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -11,9 +11,16 @@
         color: white;
         text-decoration: none;
     }
+
+    nav a.active {
+        color: red;
+    }
 </style>
 
 <nav>
-<a routerLink="/">Contador</a>
-    <a routerLink="/hero">Hero</a>
+    <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Contador</a>
+    <!-- [routerLinkActiveOptions]="{ exact: true }" indica que solamente la ruta exacta '/' debe aplicar la clase 'active' -->
+    <a [routerLink]="['/hero']" [routerLinkActive]="'active'">Hero</a>
+    <a routerLink="/dragonball" routerLinkActive="active">DragonBall</a> 
+    <a routerLink="/dragonball-super" routerLinkActive="active">DragonBall Super</a> 
 </nav>
