--- a/src/app/pages/dragonball-super/dragonball-super-page.component.html
+++ b/src/app/pages/dragonball-super/dragonball-super-page.component.html
@@ -3,12 +3,12 @@
 
 <section class="row">
     <div class="col-12 col-sm-6">
-        <add-character (newCharacter)="addCharacter($event)"/>
+        <add-character (newCharacter)="dragonballService.addCharacter($event)"/>
     </div>
 
     
 
     <div class="col-12 col-sm-6">
-        <dragonball-character-list [characters]="characters()" listName="Listado de personajes"/>
+        <dragonball-character-list [characters]="dragonballService.characters()" listName="Listado de personajes"/>
     </div>
 </section>
