--- a/src/app/pages/dragonball/dragonball-page.component.html
+++ b/src/app/pages/dragonball/dragonball-page.component.html
@@ -16,16 +16,18 @@
     <div class="col-12 col-sm-6">
         <h3>Listado de personajes fuertes</h3>
         <ul>
-            @for (character of characters(); track character.id) {
+            @for (character of characters(); track character.id; let idx = $index) {
                 @if (character.power > 500 ) {
                     <li> 
-                        <span>{{ character.name }}</span>
+                        <span>{{ idx + 1 }} - {{ character.name }}</span>
                         <strong 
                             [class.text-danger]="character.power > 9000"
                             [class.text-info]="character.power < 9000"
                         > ({{ character.power }})</strong>
                     </li>
-                }
+                } @else {
+                    <li><strong>Aquí no hay nadie</strong></li>
+                } 
             }
         </ul>
     </div>
